# 3D

./: .gitignore  Cargo.toml  README.md
assets/grass_block/: grass_block.mtl
src/: camera.rs  draw.rs  geometry.rs  line.rs  main.rs  mesh.rs  triangle.rs
