cargo-features = ["profile-rustflags"]

[package]
name = "drawing"
version = "0.1.0"
edition = "2021"

[dependencies]
pixels = "0.14.0"
win-loop = { version = "0.7.0", features = ["rwh_05"] }
glam = { version = "0.29.0", features = ["fast-math"] }
image = "0.25.2"

[profile.release]
opt-level = 3
debug = false
rpath = false
panic = "abort"
overflow-checks = false
strip = "debuginfo"

[profile.release.build-override]
rustflags = ["-C", "target-cpu=native"]
